--- a/src/index.htm
+++ b/src/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="./styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Document</title>
@@ -12,13 +13,36 @@
     <div class="container">
         <div class="card">
             <div class="image">
-                <img src="" alt="" id="image">
+                <img src="../images/jeni.jpeg" id="img" alt="">
             </div>
-            <span>
-                This photo may have a violent content.
-            </span>
-            <button class="btn">Uncover Image</button>
+            <span class="text">This image may have a violent content</span>
+            <button onclick="clickButton()" class="btn">Uncover Blur</button>
         </div>
     </div>
+    <script>
+        var btn = $(".btn")[0];
+        var txt = $(".text")[0];
+        var img = $("#img")[0];
+        var c = 0;
+
+        clickButton = () => {
+            console.log("clicked button")
+            if(c == 0) {
+                btn.innerHTML="Cover Image"
+                txt.style.display="none";
+                img.style.filter="blur(0)";
+                c = 1;
+            }else{
+                btn.innerHTML = "Uncover Blur";
+                txt.style.display="block";
+                img.style.filter="blur(24px)";
+                c = 0;
+            }
+            
+        }
+
+
+
+    </script>
 </body>
 </html>
